--- a/feeds.toml
+++ b/feeds.toml
@@ -42,3 +42,4 @@ titleSelector = "strong.tit_txt"
 linkSelector = "a"
 contentSelector = "div.desc_thumb"
 waitUntil = "networkidle"
+onFail = "stale"
