--- a/feeds.toml
+++ b/feeds.toml
@@ -34,6 +34,15 @@ linkSelector = "a"
 contentSelector = "p.desc_thumb"
 waitUntil = "networkidle"
 
+[channela_factcheck]
+title = "다음 뉴스 ─ 채널A 팩트맨"
+url = "https://news.daum.net/series/5157383"
+entrySelector = "ul.list_news li"
+titleSelector = "a.link_txt"
+linkSelector = "a"
+contentSelector = "p.desc_thumb"
+waitUntil = "networkidle"
+
 [factcheck]
 title = "다음 뉴스 ─ 팩트체크"
 url = "https://focus.daum.net/ch/news/factcheck"
