--- a/feeds.toml
+++ b/feeds.toml
@@ -34,6 +34,24 @@ linkSelector = "a"
 contentSelector = "p.desc_thumb"
 waitUntil = "networkidle"
 
+[khan_factcheck]
+title = "다음 뉴스 ─ 경향신문 팩트체크"
+url = "https://news.daum.net/series/5028270"
+entrySelector = "ul.list_news li"
+titleSelector = "a.link_txt"
+linkSelector = "a"
+contentSelector = "p.desc_thumb"
+waitUntil = "networkidle"
+
+[ohmynews_ohmyfact]
+title = "다음 뉴스 ─ 오마이뉴스 오마이팩트"
+url = "https://news.daum.net/series/5175756"
+entrySelector = "ul.list_news li"
+titleSelector = "a.link_txt"
+linkSelector = "a"
+contentSelector = "p.desc_thumb"
+waitUntil = "networkidle"
+
 [jtbc_factcheck]
 title = "다음 뉴스 ─ JTBC 팩트체크"
 url = "https://news.daum.net/series/1453"
