--- a/feeds.toml
+++ b/feeds.toml
@@ -6,6 +6,7 @@ titleSelector = "a.link_txt"
 linkSelector = "a"
 contentSelector = "p.desc_thumb"
 waitUntil = "networkidle"
+onFail = "stale"
 
 [mbc_factcheck]
 title = "다음 뉴스 ─ MBC 알고보니"
@@ -15,6 +16,7 @@ titleSelector = "a.link_txt"
 linkSelector = "a"
 contentSelector = "p.desc_thumb"
 waitUntil = "networkidle"
+onFail = "stale"
 
 [kbs_factcheck]
 title = "다음 뉴스 ─ KBS 팩트체크K"
@@ -24,8 +26,9 @@ titleSelector = "a.link_txt"
 linkSelector = "a"
 contentSelector = "p.desc_thumb"
 waitUntil = "networkidle"
+onFail = "stale"
 
-[channela_factcheck]
+[channela_factman]
 title = "다음 뉴스 ─ 채널A 팩트맨"
 url = "https://news.daum.net/series/5157383"
 entrySelector = "ul.list_news li"
@@ -33,6 +36,7 @@ titleSelector = "a.link_txt"
 linkSelector = "a"
 contentSelector = "p.desc_thumb"
 waitUntil = "networkidle"
+onFail = "stale"
 
 [khan_factcheck]
 title = "다음 뉴스 ─ 경향신문 팩트체크"
@@ -42,6 +46,7 @@ titleSelector = "a.link_txt"
 linkSelector = "a"
 contentSelector = "p.desc_thumb"
 waitUntil = "networkidle"
+onFail = "stale"
 
 [ohmynews_ohmyfact]
 title = "다음 뉴스 ─ 오마이뉴스 오마이팩트"
@@ -51,6 +56,7 @@ titleSelector = "a.link_txt"
 linkSelector = "a"
 contentSelector = "p.desc_thumb"
 waitUntil = "networkidle"
+onFail = "stale"
 
 [jtbc_factcheck]
 title = "다음 뉴스 ─ JTBC 팩트체크"
